Fix models input select not fitting text

--- a/milestone3/assets/css/layout.css
+++ b/milestone3/assets/css/layout.css
@@ -107,7 +107,7 @@ section.container-full {
 }
 
 .model-select {
-  flex: 3 3 100px;
+  flex: 4 4 250px;
 }
 
 .radio-btns {
@@ -120,7 +120,7 @@ section.container-full {
 }
 
 .btns {
-  flex: 1 1 30px;
+  flex: 0 1 30px;
   margin: 0;
 }
 
@@ -131,7 +131,8 @@ section.container-full {
   color: black;
   background-color: white;
   border-radius: 6px;
-  box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.5), 0 8px 10px -6px rgb(0 0 0 / 0.5);
+  box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.5),
+    0 8px 10px -6px rgb(0 0 0 / 0.5);
   position: fixed;
   display: none;
   pointer-events: none;
